--- a/index.html
+++ b/index.html
@@ -256,9 +256,7 @@
 
       <tr>
 
-        <th>Degree</th>
-
-        <th>University</th>
+        <th>Scholl</th>
 
         <th>Year</th>
 
@@ -266,21 +264,22 @@
 
       <tr>
 
-        <td>Associate's degree, Electrical Engineering</td>
+        <td>SD N Campuranom</td>
 
-        <td>Pakistani Swedish Institute of Technology</td>
+        <td>2011-2017</td>
+      <tr>
 
-        <td>2021 - 2024</td>
+        <td>MTs N 1 Temanggung </td>
+
+        <td>2017 - 2020</td>
 
       </tr>
 
       <tr>
 
-        <td>Bachelor of Science in Computer Science</td>
+        <td>SMK N Bansari</td>
 
-        <td>NED University of Technalogy</td>
-
-        <td>2023 - 2027</td>
+        <td>2020 - 2023</td>
 
       </tr>
 
