--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@
 
   <div class="section" style="background-color: #f7f7f7;">
 
-    <h2 style="color: #333333;">Education</h2>
+    <h2 style="color: #333333;">Riwayat Pendidikan</h2>
 
     <table>
 
       <tr>
 
-        <th>Scholl</th>
+        <th>Nama Sekolah</th>
 
-        <th>Year</th>
+        <th>Tahun Ajaran</th>
 
       </tr>
 
@@ -291,37 +291,37 @@
 
   <div class="section" style="background-color: #f7f7f7;">
 
-    <h2 style="color: #333333;">Work Experience</h2>
+    <h2 style="color: #333333;">Pengalaman Kerja</h2>
 
     <table>
 
       <tr>
 
-        <th>Position</th>
+        <th>Posisi</th>
 
-        <th>Company</th>
+        <th>Perusahaan</th>
 
-        <th>Dates</th>
-
-      </tr>
-
-      <tr>
-
-        <td>Founder</td>
-
-        <td>Indollar</td>
-
-        <td>May 2021 - Present</td>
+        <th>Tahun</th>
 
       </tr>
 
       <tr>
 
-        <td>Co-founder</td>
+        <td>Prakerin/PKL</td>
 
-        <td>Skinned Orbital LTD</td>
+        <td>GAVRIL CELL</td>
 
-        <td>Feb 2023 - Present</td>
+        <td>Maret-Agustus 2022</td>
+
+      </tr>
+
+      <tr>
+
+        <td>Magang</td>
+
+        <td>DTech Engineering</td>
+
+        <td>Nov-2022(2 minggu)</td>
 
       </tr>
 
@@ -341,11 +341,7 @@
 
         <td class="skills">
 
-          <span>Python</span>
-
-          <span>AI/ML</span>
-
-          <span>Power BI</span>
+          <span>Bahasa Indonesia</span>
 
         </td>
 
@@ -355,9 +351,51 @@
 
     <div class="skills-bar">
 
-      <div class="skills-progress" style="width: 80%;"></div>
+      <div class="skills-progress" style="width: 95%;"></div>
 
     </div>
+
+    <table>
+
+      <tr>
+
+        <td class="skills">
+
+          <span>Bahasa Jawa</span>
+
+        </td>
+
+      </tr>
+
+    </table>
+
+    <div class="skills-bar">
+
+      <div class="skills-progress" style="width: 97%;"></div>
+
+    </div>
+
+    <table>
+
+      <tr>
+
+        <td class="skills">
+
+          <span>Bahasa Inggris</span>
+
+        </td>
+
+      </tr>
+
+    </table>
+
+    <div class="skills-bar">
+
+      <div class="skills-progress" style="width: 30%;"></div>
+
+    </div>
+    
+    
 
   </div>
 
@@ -365,15 +403,13 @@
 
   <div class="section" style="background-color: #f7f7f7;">
 
-    <h2 style="color: #333333;">Courses and Certifications</h2>
+    <h2 style="color: #333333;">Penghargaan</h2>
 
     <ul>
 
-      <li>Crash Course on Python (Google)</li>
+      <li>LKS Kabupaten Temanggung - Teknik Elektronika</li>
 
-      <li>AI for Everyone (Deep Learning.AI)</li>
-
-      <li>Microsoft Power Platform Fundamentals (Microsoft)</li>
+      <li>LKS JATENG 2023 - Teknik Elektronika</li>
 
     </ul>
 
