--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>My Curriculum vitae</title>
+  <title>My Curriculum Vitae</title>
 
   <style>
 
@@ -142,7 +142,7 @@
 
       color: #555555;
 
-      font-size: 18px;
+      font-size: 24px;
 
       padding: 4px 8px;
 
