--- a/index.html
+++ b/index.html
@@ -335,6 +335,25 @@
 
     <h2 style="color: #333333;">Skills</h2>
 
+
+    <table>
+
+      <tr>
+
+        <td class="skills">
+
+          <span>Public Speaking</span>
+
+        </td>
+      </tr>
+    </table>
+
+    <div class="skills-bar">
+
+      <div class="skills-progress" style="width: 85%;"></div>
+
+    </div>
+    
     <table>
 
       <tr>
