--- a/index.html
+++ b/index.html
@@ -325,6 +325,13 @@
 
       </tr>
 
+      <tr>
+        <td>Bekerja</td>
+
+        <td>RM-Citra Minang</td>
+        <td>1 September - 25 Desember 2023 (± 4 Bulan)</td>
+      </tr>
+
     </table>
 
   </div>
