--- a/index.html
+++ b/index.html
@@ -296,40 +296,9 @@
     <table>
 
       <tr>
-
-        <th>Posisi</th>
-
-        <th>Perusahaan</th>
-
-        <th>Tahun</th>
-
-      </tr>
-
-      <tr>
-
-        <td>Prakerin/PKL</td>
-
-        <td>GAVRIL CELL</td>
-
-        <td>Maret-Agustus 2022</td>
-
-      </tr>
-
-      <tr>
-
-        <td>Magang</td>
-
-        <td>DTech Engineering</td>
-
-        <td>Nov-2022(2 minggu)</td>
-
-      </tr>
-
-      <tr>
         <td>Bekerja</td>
-
         <td>RM-Citra Minang</td>
-        <td>1 September - 25 Desember 2023 (± 4 Bulan)</td>
+        <td>1 September - 25 Desember 2023 ( ± 4 Bulan )</td>
       </tr>
 
     </table>
@@ -343,6 +312,25 @@
     <h2 style="color: #333333;">Skills</h2>
 
 
+    <table>
+
+      <tr>
+
+        <td class="skills">
+
+          <span>Masak</span>
+
+        </td>
+      </tr>
+
+    </table>
+
+    <div class="skills-bar">
+
+      <div class="skills-progress" style="width: 65%;"></div>
+
+    </div>
+    
     <table>
 
       <tr>
