--- a/index.html
+++ b/index.html
@@ -298,10 +298,21 @@
       <tr>
         <td>Bekerja</td>
         <td>RM-Citra Minang</td>
-        <td>1 September - 25 Desember 2023 ( ± 4 Bulan )</td>
+        <td>1 September - 25 Desember 2023 </td>
       </tr>
 
     </table>
+
+    <table>
+
+      <tr>
+        <td>Bekerja</td>
+        <td>RM-Surya Minang Jaya</td>
+        <td>21 Juli - 01 November 2024 </td>
+      </tr>
+
+    </table>
+    
 
   </div>
 
